--- a/index.html
+++ b/index.html
@@ -10,9 +10,134 @@
 			rel="stylesheet"
 			href="style.css"
 		/>
-		<title>Byte</title>
+		<title>Snap Syntax</title>
 	</head>
 	<body>
-		<div class="container">Byte</div>
+		<nav class="navbar">
+			<div class="navbar-item pam">Pam</div>
+			<div class="navbar-item info">Info</div>
+			<div class="navbar-item projects">Projects</div>
+			<div class="navbar-item bsa">BSA &amp; Economics</div>
+		</nav>
+
+		<!-- New Grid Section -->
+
+		<div class="main-content">
+			<!-- Left fixed scrollable container -->
+			<div class="left-container">
+				<div class="left-scrollable">
+					<p>Selected Works</p>
+				</div>
+			</div>
+
+			<!-- Right scrollable container -->
+			<div class="right-container">
+				<div class="grid-container">
+					<div class="grid-item empty"></div>
+					<div class="grid-item rossi">Fratelli Rossi</div>
+					<div class="grid-item lorem-text">
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+						Accusamus iure doloribus assumenda voluptatem voluptatum at
+						eius facilis.
+						<br />
+						<br />
+						<p class="hyperlink">View All Works &rarr;</p>
+					</div>
+				</div>
+				<div class="scrollable-container-wrapper">
+					<div class="outer-container one">
+						<div class="inner-container">
+							<video
+								src="./assets/img.mp4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+
+					<div class="outer-container two">
+						<div class="inner-container">
+							<video
+								src="./assets/IMG_2130.MP4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+
+					<div class="outer-container three">
+						<div class="inner-container">
+							<video
+								src="./assets/IMG_2131.MP4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+
+					<div class="outer-container four">
+						<div class="inner-container">
+							<video
+								src="./assets/IMG_3148.MP4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+
+					<div class="outer-container five">
+						<div class="inner-container">
+							<video
+								src="./assets/IMG_3149.MP4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+
+					<div class="outer-container six">
+						<div class="inner-container">
+							<video
+								src="./assets/IMG_2131.MP4"
+								style="height: 100%; width: 100%"
+								autoplay
+								muted
+								loop
+							></video>
+						</div>
+					</div>
+					<div class="content-text">
+						This is some text between sections.
+					</div>
+				</div>
+			</div>
+		</div>
+
+		
 	</body>
 </html>
